@@ -6,15 +6,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import sun.misc.BASE64Decoder;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.Base64;
 import java.util.UUID;
 
 @RequestMapping("/login/customer/api")
@@ -46,42 +45,30 @@ public class CustomerLoginControlller {
 //
 //        System.out.println(header);
 //
-   String decodedAuth = "";
+        String decodedAuth = "";
 //        String[] authParts = header.split("\\s+");
         String authInfo = authParts[1];
         byte[] bytes = null;
-        try {
-            bytes = new BASE64Decoder().decodeBuffer(authInfo);
-        } catch (IOException e) {
-            e.printStackTrace();
-            // TODO Auto-generated catch block
-            return new ResponseEntity<>("BAD REQUEST",new HttpHeaders(), HttpStatus.BAD_REQUEST);
-
-        }
+        bytes = Base64.getDecoder().decode(authInfo);
         decodedAuth = new String(bytes);
         String username = decodedAuth.split(":")[0];
         long userId = Long.parseLong(username);
 
         String enteredPassword = decodedAuth.split(":")[1];
-        username=username.toLowerCase();
+        username = username.toLowerCase();
 
         Customer customer = customerDao.findByUserId(userId);
-        if(customer==null)
-        {
+        if (customer == null) {
             System.out.println("customer is null");
-            return new ResponseEntity<>("Username not found",new HttpHeaders(),HttpStatus.UNAUTHORIZED);
-        }
-        else
-        {
-            if(customer.getPassword().equals(enteredPassword)){
+            return new ResponseEntity<>("Username not found", new HttpHeaders(), HttpStatus.UNAUTHORIZED);
+        } else {
+            if (customer.getPassword().equals(enteredPassword)) {
                 String token = UUID.randomUUID().toString();
                 customer.setToken(token);
                 customerDao.save(customer);
                 return ResponseEntity.ok(customer);
-            }
-            else
-            {
-                return new ResponseEntity<>("Username or password is Wrong",new HttpHeaders(),HttpStatus.UNAUTHORIZED);
+            } else {
+                return new ResponseEntity<>("Username or password is Wrong", new HttpHeaders(), HttpStatus.UNAUTHORIZED);
             }
         }
     }
